# qrcode

./: pyproject.toml
moli_qrcode/: copyfile.py
qrcode/: moli_qrcode_decoder.py  qrcodes.py
tests/: test.py  wechat.py
