[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qrcode"
version = "0.0.1"
description = "qrcode recognition"
authors = [
    { name = "Xiaochuan Zou", email = "zouxiaochuan@163.com" }
]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scipy",
    "opencv-python",
    "pyzbar",
    "qrdet"
]
requires-python = ">=3.6"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]